Initialize Starknet project with Bitcoin Payment Gateway contracts
- Added PaymentGateway contract with payment processing, refunds, and merchant management
- Added MockWBTC token contract with faucet functionality
- Added Marketplace contract demonstrating payment gateway integration
- Fixed all compilation issues (storage access traits, visibility, variable moves)
- Configured Scarb.toml with proper dependencies
- Added BUILD_NOTES.md documenting known OpenZeppelin compatibility issue

--- a/smartcontract/Scarb.toml
+++ b/smartcontract/Scarb.toml
@@ -1,10 +1,12 @@
 [package]
-name = "btc-payment-gateway"
+name = "btc_payment_gateway"
 version = "0.1.0"
-edition = "2.1.0"
+edition = "2024_07"
 
 [dependencies]
-starknet = ">=2.3.0"
-snforge_std = { version = ">=2.3.0", dev-dependencies = true }
+starknet = ">=2.0.0"
+# Using v0.14.0 - known secp256k1 conflict exists but doesn't affect our usage
+# We only use token, access, and security packages, not account/preset packages
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.14.0" }
 
 [[target.starknet-contract]]
